--- a/src/components/footer/ButtonBlock.module.css
+++ b/src/components/footer/ButtonBlock.module.css
@@ -1,27 +1,21 @@
-.container {
-    height: 10vh;
-    display: flex;
-    background-color: #f8f8f8;
-    padding-left: 5vw;
-}
-
-.navBlock {
+.navBtn {
     outline: none;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #f8f8f8;
-    border-bottom: solid 2px #00B6FF;
+    border-bottom: solid 3px #00B6FF;
     box-sizing: border-box;
     width: 10vw;
     padding: 5px;
     cursor: pointer;
     composes: block-center from '../../_variables.css';
+    font-size: 3vh;
 }
-.navBlock:hover{
+.navBtn:hover{
     background-color: #00B6FF;
     opacity: 0.6;
     color: white;
  }
-.navBlock.activeBtn{
+.activeBtn{
     background-color: #00B6FF;
     color: white;
  }
