--- a/src/components/header/menu/Menu.module.css
+++ b/src/components/header/menu/Menu.module.css
@@ -1,19 +1,25 @@
-import React from 'react';
-import s from 'react';
+.container {
+    position: absolute;
+    width: 30vw;
+    height: 90vh;
+    left: 70vw;
+    top: 10vh;
+    z-index: 5;
+    background-color: #212121;
+    box-sizing: border-box;
 
-const Menu = () => {
-  return (
-      <div className={s.container}>
-            <div className={s.item}>Обучающее видео</div>
-            <div className={s.item}>Оформление заказа</div>
-            <div className={s.item}>Оплата</div>
-            <div className={s.item}>Доставка</div>
-            <div className={s.item}>Гарантия</div>
-            <div className={s.item}>Возврат</div>
-            <div className={s.item}>Контакты</div>
-            <div className={s.item}>Партнёрам</div>
-      </div>
-  );
-};
+}
 
-export default Menu;
+.item {
+    composes: block-center from '../../../_variables.css';
+    border: solid 1px #282828;
+    height: calc(90vh / 8);
+    color: white;
+    font-size: 2.5vh;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+.item:hover {
+    background-color: #000000;
+}
