--- a/src/components/infoPage/InfoPage.module.css
+++ b/src/components/infoPage/InfoPage.module.css
@@ -1,11 +1,21 @@
-import React from 'react';
+.mainContainer {
+    height: 78vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 
-const InfoPage = (props) => {
-  return (
-      <div className={s.mainContainer}>
+.btn {
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    color: grey;
+    font-size: 3vh;
+    padding: 0;
+    margin: 30px;
+}
 
-      </div>
-  );
-};
-
-export default InfoPage;
+.description {
+    padding-left: 30px;
+}
